--- a/Index.html
+++ b/Index.html
@@ -7,6 +7,9 @@
   <title>Swift Hub Catalão - Início</title>
   <!-- Font Awesome para o ícone do WhatsApp -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+  <!-- Firebase SDK -->
+  <script src="https://www.gstatic.com/firebasejs/9.6.8/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.8/firebase-auth.js"></script>
   <style>
     /* Reset e configuração global */
     * { box-sizing: border-box; margin: 0; padding: 0; }
@@ -72,7 +75,7 @@
       position: fixed;
       bottom: 20px;
       right: 20px;
-      background-color: #25D366;
+      background: #25D366;
       color: #fff;
       border-radius: 50%;
       width: 60px;
@@ -86,19 +89,45 @@
   </style>
 </head>
 <body>
+
+  <!-- Verificação de login com Firebase Authentication -->
   <script>
+    // Configuração do Firebase
+    const firebaseConfig = {
+      apiKey: "AIzaSyDGBKxvfcY-PA_vC7SA8G0f-TjqjK3OD3o",
+      authDomain: "swifthubcatalao.firebaseapp.com",
+      projectId: "swifthubcatalao",
+      storageBucket: "swifthubcatalao.firebasestorage.app",
+      messagingSenderId: "756803145076",
+      appId: "1:756803145076:web:4593bd78a26a2270a1f021"
+    };
+
+    firebase.initializeApp(firebaseConfig);
+    const auth = firebase.auth();
+
     // Verifica se o usuário está logado; se não, redireciona para login.html
-    if(localStorage.getItem("loggedIn") !== "true") {
-      window.location.href = "login.html";
+    firebase.auth().onAuthStateChanged((user) => {
+      if (!user) {
+        window.location.href = "login.html";
+      }
+    });
+
+    // Logout
+    function logout() {
+      auth.signOut().then(() => {
+        window.location.href = "login.html";
+      });
     }
   </script>
+
   <header>
     <div class="container">
       <h1>Swift Hub Catalão</h1>
       <p>Conectando você aos melhores profissionais</p>
-      <button id="logoutButton">Sair</button>
+      <button id="logoutButton" onclick="logout()">Sair</button>
     </div>
   </header>
+  
   <nav>
     <div class="container">
       <ul>
@@ -107,6 +136,7 @@
       </ul>
     </div>
   </nav>
+  
   <section id="inicio">
     <div class="container">
       <h2>Bem-vindo à Swift Hub Catalão</h2>
@@ -118,20 +148,17 @@
       </p>
     </div>
   </section>
+  
   <footer>
     <div class="container">
       <p>&copy; 2025 Swift Hub Catalão. Todos os direitos reservados.</p>
     </div>
   </footer>
+  
   <!-- Botão flutuante do WhatsApp -->
   <a href="https://wa.me/64981226078" class="whatsapp-float" target="_blank">
     <i class="fab fa-whatsapp"></i>
   </a>
-  <script>
-    document.getElementById("logoutButton").addEventListener("click", function(){
-      localStorage.setItem("loggedIn", "false");
-      window.location.href = "login.html";
-    });
-  </script>
+
 </body>
 </html>
