--- a/login.html
+++ b/login.html
@@ -12,22 +12,9 @@
   <script src="https://www.gstatic.com/firebasejs/9.6.8/firebase-auth.js"></script>
   <style>
     /* Reset e estilos gerais */
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
-    body {
-      font-family: Arial, sans-serif;
-      background: #f1f1f1;
-      color: #333;
-      line-height: 1.6;
-    }
-    .container {
-      max-width: 400px;
-      margin: auto;
-      padding: 20px;
-    }
+    * { box-sizing: border-box; margin: 0; padding: 0; }
+    body { font-family: Arial, sans-serif; background: #f1f1f1; color: #333; line-height: 1.6; }
+    .container { max-width: 400px; margin: auto; padding: 20px; }
     /* Estilos do Modal de Erro */
     .modal {
       display: none;
@@ -72,10 +59,7 @@
       flex-direction: column;
       text-align: left;
     }
-    form label {
-      margin-bottom: 5px;
-      font-weight: bold;
-    }
+    form label { margin-bottom: 5px; font-weight: bold; }
     form input {
       padding: 10px;
       margin-bottom: 10px;
@@ -91,12 +75,8 @@
       cursor: pointer;
       transition: background 0.2s;
     }
-    form button:hover {
-      background: #a01d2d;
-    }
-    .toggle-link {
-      margin-top: 10px;
-    }
+    form button:hover { background: #a01d2d; }
+    .toggle-link { margin-top: 10px; }
     .toggle-link a {
       color: #3C3B6E;
       text-decoration: none;
